Almost completed changes

--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -16,32 +16,30 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="./assets/MuzzlesLogo.png" alt="Bootstrap" width="250px">
+          <img src="../assets/MuzzlesLogo.png" alt="Muzzles Logo" width="250px">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: #5F002B;">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">About</a>
+              <a class="nav-link" href="../pages/About.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Menu</a>
+              <a class="nav-link" href="../pages/Menu.html">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Catering</a>
+              <a class="nav-link" href="../pages/Catering.html">Catering</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Photo</a>
+              <a class="nav-link" href="../pages/Photos.html">Photo</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-
-
-
 
 
 
@@ -63,30 +61,35 @@
         <img src="../assets/menubeef.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
         <div class="card-body">
           <h5 class="card-title txtColor">Sandwiches</h5>
-          <p class="card-text fntFace">All sandwiches come with an side of crispy fries</p>
+          <p class="card-text subtitle">All sandwiches come with an side of crispy fries</p>
           <br>
-          <h2 class="fntName">Sizzling Steak Sandwich</h2>
-          <p class="fntFace">Open faced steak sandwich with grilled belle peppers and fried onions.</p>
+          <div class="foodItemAndPrice">Sizzling Steak Sandwich</div>
+          <div class="foodItemAndPrice" class="text-end">$15.99</div>
+          <p class="subtitle">Open faced steak sandwich with grilled belle peppers and fried onions.</p>
 
           <hr>
 
-          <h2 class="fntName">Tenderloin Sliders</h2>
-          <p class="fntFace">Three beef tenderloin sliders with horseradish cream and blackberry bbq.</p>
+          <div class="foodItemAndPrice">Tenderloin Sliders</div>
+          <div class="foodItemAndPrice">$13.99</div>
+          <p class="subtitle">Three beef tenderloin sliders with horseradish cream and blackberry bbq.</p>
 
           <hr class="font">
 
-          <h2 class="fntName">Classic Chicken Panini</h2>
-          <p class="fntFace">Grilled chicken with Monterey jack, romaine lettuce, tomato, and cilantro.</p>
+          <h2 class="foodItemAndPrice">Classic Chicken Panini</h2>
+          <div class="foodItemAndPrice">$10.99</div>
+          <p class="subtitle">Grilled chicken with Monterey jack, romaine lettuce, tomato, and cilantro.</p>
 
           <hr class="font">
 
-          <h2 class="fntName">Smoked Turkey Club</h2>
-          <p class="fntFace">Smoked deli turkey, maple bacon, cranberry aioli, lettuce and tomatoes.</p>
+          <h2 class="foodItemAndPrice">Smoked Turkey Club</h2>
+          <div class="foodItemAndPrice">$8.99</div>
+          <p class="subtitle">Smoked deli turkey, maple bacon, cranberry aioli, lettuce and tomatoes.</p>
 
           <hr class="font">
 
-          <h2 class="fntName">Tuna Sandwich</h2>
-          <p class="fntFace">Tuna salad with sprouts, sliced tomatoes and cilantro lime mayo on toast.</p>
+          <h2 class="foodItemAndPrice">Tuna Sandwich</h2>
+          <div class="foodItemAndPrice">$6.99</div>
+          <p class="subtitle">Tuna salad with sprouts, sliced tomatoes and cilantro lime mayo on toast.</p>
 
           <hr class="font">
 
@@ -98,27 +101,30 @@
         <img src="../assets/menuseafood.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
         <div class="card-body">
           <h5 class="card-title txtColor">Seafood</h5>
-          <p class="card-text fntFace">All seafood comes with a side of rice pilaf and grilled vegetables</p>
+          <p class="card-text subtitle">All seafood comes with a side of rice pilaf and grilled vegetables</p>
           <br>
-          <h2 class="fntName">Honey Shrimp Skewers</h2>
-          <p class="fntFace">Ten honey glazed shrimps grilled with sesame seeds and rosemary.</p>
+          <h2 class="foodItemAndPrice">Honey Shrimp Skewers</h2>
+          <div class="foodItemAndPrice">$15.99</div>
+          <p class="subtitle">Ten honey glazed shrimps grilled with sesame seeds and rosemary.</p>
 
           <hr class="font">
 
-          <h2 class="fntName">Grilled Salmon</h2>
-          <p class="fntFace">Salmon grilled in a lime butter sauce.</p>
+          <h2 class="foodItemAndPrice">Grilled Salmon</h2>
+          <div class="foodItemAndPrice">$13.99</div>
+          <p class="subtitle">Salmon grilled in a lime butter sauce.</p>
 
           <hr class="font">
 
-          <h2 class="fntName">Grilled Tilapia</h2>
-          <p class="fntFace">A whole grilled tilapia cooked with smoked paprika.</p>
+          <h2 class="foodItemAndPrice">Grilled Tilapia</h2>
+          <div class="foodItemAndPrice">$10.99</div>
+          <p class="subtitle">A whole grilled tilapia cooked with smoked paprika.</p>
 
           <hr class="font">
 
-          <h2 class="fntName">Parmesan Fish Sticks</h2>
-          <p class="fntFace">Sliced salmon in parmesan breading served with lemon dill tartar sauce.</p>
+          <h2 class="foodItemAndPrice">Parmesan Fish Sticks</h2>
+          <div class="foodItemAndPrice">$8.99</div>
+          <p class="subtitle">Sliced salmon in parmesan breading served with lemon dill tartar sauce.</p>
 
-          <hr class="font">
 
           <h2>&nbsp;</h2>
           <p>&nbsp;</p>
@@ -132,30 +138,35 @@
         <img src="../assets/menumeat.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
         <div class="card-body">
           <h5 class="card-title txtColor">On the grill</h5>
-          <p class="card-text fntFace">Served with corn, cheddar biscuits, and your choice of coleslaw or potato salad.</p>
+          <p class="card-text subtitle">Served with corn, cheddar biscuits, and your choice of coleslaw or potato salad.</p>
           <br>
-          <h2 class="fntName">Baby Back - Full Rack</h2>
-          <p class="fntFace">A full rack of pork babyback ribs grilled and glazed with blackberry bbq.</p>
+          <h2 class="foodItemAndPrice">Baby Back - Full Rack</h2>
+          <div class="foodItemAndPrice">$19.99</div>
+          <p class="subtitle">A full rack of pork babyback ribs grilled and glazed with blackberry bbq.</p>
 
           <hr class="font">
 
-          <h2 class="fntName">Baby Back - Half Rack</h2>
-          <p class="fntFace">A half rack of pork babyback ribs grilled and glazed with blackberry bbq.</p>
+          <h2 class="foodItemAndPrice">Baby Back - Half Rack</h2>
+          <div class="foodItemAndPrice">$13.99</div>
+          <p class="subtitle">A half rack of pork babyback ribs grilled and glazed with blackberry bbq.</p>
 
           <hr class="font">
 
-          <h2 class="fntName">Boneless Ribeye</h2>
-          <p class="fntFace">A three inch thick boneless ribeye grilled in a rosemary rub and butter</p>
+          <h2 class="foodItemAndPrice">Boneless Ribeye</h2>
+          <div class="foodItemAndPrice">$25.99</div>
+          <p class="subtitle">A three inch thick boneless ribeye grilled in a rosemary rub and butter</p>
 
           <hr class="font">
 
-          <h2 class="fntName">Smoked Turkey Club</h2>
-          <p class="fntFace">Smoked deli turkey, maple bacon, cranberry aioli, lettuce and tomatoes.</p>
+          <h2 class="foodItemAndPrice">Smoked Turkey Club</h2>
+          <div class="foodItemAndPrice">$8.99</div>
+          <p class="subtitle">Smoked deli turkey, maple bacon, cranberry aioli, lettuce and tomatoes.</p>
 
           <hr class="font">
 
-          <h2 class="fntName">Tuna Sandwich</h2>
-          <p class="fntFace">Tuna salad with sprouts, sliced tomatoes and cilantro lime mayo on toast.</p>
+          <h2 class="foodItemAndPrice">Tuna Sandwich</h2>
+          <div class="foodItemAndPrice">$6.99</div>
+          <p class="subtitle">Tuna salad with sprouts, sliced tomatoes and cilantro lime mayo on toast.</p>
 
           <hr class="font">
 
@@ -167,30 +178,35 @@
         <img src="../assets/menudesserts.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
         <div class="card-body">
           <h5 class="card-title txtColor">Desserts</h5>
-          <p class="card-text fntFace">A shot of esspresso can be added to any dessert for an additional $2.</p>
+          <p class="card-text subtitle">A shot of esspresso can be added to any dessert for an additional $2.</p>
           <br>
-          <h2 class="fntFace">Double Walnut Brownies</h2>
-          <p class="fntFace">Two brownies with a walnut crust, ice cream and chocolate sauce.</p>
+          <h2 class="foodItemAndPrice">Double Walnut Brownies</h2>
+          <div class="foodItemAndPrice">$8.99</div>
+          <p class="subtitle">Two brownies with a walnut crust, ice cream and chocolate sauce.</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">Cheese Cake with Chocolate Sauce</h2>
-          <p class="fntFace">Cheesecake with ice cream, chocolate shavings and chocolate sauce.</p>
+          <h2 class="foodItemAndPrice">Cheese Cake with Chocolate Sauce</h2>
+          <div class="foodItemAndPrice">$7.99</div>
+          <p class="subtitle">Cheesecake with ice cream, chocolate shavings and chocolate sauce.</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">Triple Chocolate Brownie</h2>
-          <p class="fntFace">A tripple chocolate brownie served with vanilla ice cream and walnuts.</p>
+          <h2 class="foodItemAndPrice">Triple Chocolate Brownie</h2>
+          <div class="foodItemAndPrice">$6.99</div>
+          <p class="subtitle">A tripple chocolate brownie served with vanilla ice cream and walnuts.</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">House Made Shaved Gelato and Cookies</h2>
-          <p class="fntFace">Your choice of shaved gelato with whole cookies. Options change daily.</p>
+          <h2 class="foodItemAndPrice">House Made Shaved Gelato and Cookies</h2>
+          <div class="foodItemAndPrice">$5.99</div>
+          <p class="subtitle">Your choice of shaved gelato with whole cookies. Options change daily.</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">Grilled Peaches and Ice Cream</h2>
-          <p class="fntFace">Grilled peaches in cinnamon and brown sugar glaze with ice cream.</p>
+          <h2 class="foodItemAndPrice">Grilled Peaches and Ice Cream</h2>
+          <div class="foodItemAndPrice">$4.99</div>
+          <p class="subtitle">Grilled peaches in cinnamon and brown sugar glaze with ice cream.</p>
 
           <hr class="font">
 
