--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -63,32 +63,43 @@
           <h5 class="card-title txtColor">Sandwiches</h5>
           <p class="card-text subtitle">All sandwiches come with an side of crispy fries</p>
           <br>
+          <div class="d-flex justify-content-between">
           <div class="foodItemAndPrice">Sizzling Steak Sandwich</div>
           <div class="foodItemAndPrice" class="text-end">$15.99</div>
+          </div>
           <p class="subtitle">Open faced steak sandwich with grilled belle peppers and fried onions.</p>
 
           <hr>
 
+        <div class="d-flex justify-content-between">
+          <div class="d-flex justify-content-between">
           <div class="foodItemAndPrice">Tenderloin Sliders</div>
           <div class="foodItemAndPrice">$13.99</div>
+          </div>
           <p class="subtitle">Three beef tenderloin sliders with horseradish cream and blackberry bbq.</p>
-
+        </div>
           <hr class="font">
 
-          <h2 class="foodItemAndPrice">Classic Chicken Panini</h2>
-          <div class="foodItemAndPrice">$10.99</div>
+          <div class="d-flex justify-content-between">
+            <div class="foodItemAndPrice pe-1">Classic Chicken Panini</div>
+            <div class="foodItemAndPrice">$10.99</div>
+          </div>
           <p class="subtitle">Grilled chicken with Monterey jack, romaine lettuce, tomato, and cilantro.</p>
 
           <hr class="font">
 
-          <h2 class="foodItemAndPrice">Smoked Turkey Club</h2>
-          <div class="foodItemAndPrice">$8.99</div>
+            <div class="d-flex justify-content-between">
+             <div class="foodItemAndPrice pe-1">Smoked Turkey Club</div>
+             <div class="foodItemAndPrice">$8.99</div>
+            </div>
           <p class="subtitle">Smoked deli turkey, maple bacon, cranberry aioli, lettuce and tomatoes.</p>
 
           <hr class="font">
 
-          <h2 class="foodItemAndPrice">Tuna Sandwich</h2>
+        <div class="d-flex justify-content-between">
+          <div class="foodItemAndPrice">Tuna Sandwich</div>
           <div class="foodItemAndPrice">$6.99</div>
+               </div>  
           <p class="subtitle">Tuna salad with sprouts, sliced tomatoes and cilantro lime mayo on toast.</p>
 
           <hr class="font">
@@ -103,33 +114,40 @@
           <h5 class="card-title txtColor">Seafood</h5>
           <p class="card-text subtitle">All seafood comes with a side of rice pilaf and grilled vegetables</p>
           <br>
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">Honey Shrimp Skewers</h2>
           <div class="foodItemAndPrice">$15.99</div>
+          </div>
           <p class="subtitle">Ten honey glazed shrimps grilled with sesame seeds and rosemary.</p>
 
           <hr class="font">
 
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">Grilled Salmon</h2>
           <div class="foodItemAndPrice">$13.99</div>
+          </div>
           <p class="subtitle">Salmon grilled in a lime butter sauce.</p>
 
           <hr class="font">
 
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">Grilled Tilapia</h2>
           <div class="foodItemAndPrice">$10.99</div>
+          </div>
           <p class="subtitle">A whole grilled tilapia cooked with smoked paprika.</p>
 
           <hr class="font">
 
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">Parmesan Fish Sticks</h2>
           <div class="foodItemAndPrice">$8.99</div>
+          </div>
           <p class="subtitle">Sliced salmon in parmesan breading served with lemon dill tartar sauce.</p>
 
 
           <h2>&nbsp;</h2>
-          <p>&nbsp;</p>
 
-          <hr>
+        
         </div>
       </div>
     </div>
@@ -140,32 +158,42 @@
           <h5 class="card-title txtColor">On the grill</h5>
           <p class="card-text subtitle">Served with corn, cheddar biscuits, and your choice of coleslaw or potato salad.</p>
           <br>
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">Baby Back - Full Rack</h2>
           <div class="foodItemAndPrice">$19.99</div>
+          </div>
           <p class="subtitle">A full rack of pork babyback ribs grilled and glazed with blackberry bbq.</p>
 
           <hr class="font">
 
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">Baby Back - Half Rack</h2>
           <div class="foodItemAndPrice">$13.99</div>
+          </div>
           <p class="subtitle">A half rack of pork babyback ribs grilled and glazed with blackberry bbq.</p>
 
           <hr class="font">
 
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">Boneless Ribeye</h2>
           <div class="foodItemAndPrice">$25.99</div>
+          </div>
           <p class="subtitle">A three inch thick boneless ribeye grilled in a rosemary rub and butter</p>
 
           <hr class="font">
 
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">Smoked Turkey Club</h2>
           <div class="foodItemAndPrice">$8.99</div>
+          </div>
           <p class="subtitle">Smoked deli turkey, maple bacon, cranberry aioli, lettuce and tomatoes.</p>
 
           <hr class="font">
 
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">Tuna Sandwich</h2>
           <div class="foodItemAndPrice">$6.99</div>
+          </div>
           <p class="subtitle">Tuna salad with sprouts, sliced tomatoes and cilantro lime mayo on toast.</p>
 
           <hr class="font">
@@ -180,32 +208,42 @@
           <h5 class="card-title txtColor">Desserts</h5>
           <p class="card-text subtitle">A shot of esspresso can be added to any dessert for an additional $2.</p>
           <br>
+
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">Double Walnut Brownies</h2>
           <div class="foodItemAndPrice">$8.99</div>
+          </div>
           <p class="subtitle">Two brownies with a walnut crust, ice cream and chocolate sauce.</p>
 
           <hr class="font">
 
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">Cheese Cake with Chocolate Sauce</h2>
           <div class="foodItemAndPrice">$7.99</div>
+          </div>
           <p class="subtitle">Cheesecake with ice cream, chocolate shavings and chocolate sauce.</p>
 
           <hr class="font">
 
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">Triple Chocolate Brownie</h2>
           <div class="foodItemAndPrice">$6.99</div>
+          </div>
           <p class="subtitle">A tripple chocolate brownie served with vanilla ice cream and walnuts.</p>
 
           <hr class="font">
 
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">House Made Shaved Gelato and Cookies</h2>
           <div class="foodItemAndPrice">$5.99</div>
+          </div>
           <p class="subtitle">Your choice of shaved gelato with whole cookies. Options change daily.</p>
 
           <hr class="font">
-
+          <div class="d-flex justify-content-between">
           <h2 class="foodItemAndPrice">Grilled Peaches and Ice Cream</h2>
           <div class="foodItemAndPrice">$4.99</div>
+          </div>
           <p class="subtitle">Grilled peaches in cinnamon and brown sugar glaze with ice cream.</p>
 
           <hr class="font">
