--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -8,7 +8,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/master.css">
-  <link rel="stylesheet" href="../styles/treece.css">
 </head>
 
 <body>
@@ -46,17 +45,14 @@
 
 
 
-  <div class="container bkGround">
-    <div class="row">
-      <div class="col">
-        <h1 class="text-center txtColor">Our Menu</h1>
-      </div>
+  <div class="container-fluid catering" style="padding: 0px 7.3%; margin-top: 40px;">
+    <div class="cateringHeader">
+      <div>Our Menu</div>
     </div>
-  </div>
 
   <br>
 
-  <div class="container">
+  <div class="container-fluid">
     <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col ps-0">
         <div class="card edges">
@@ -256,13 +252,14 @@
       </div>
     </div>
   </div>
-
+</div>
   <div class="footer">
     <div class="text location1">1357 Mutt Street, Rottweiler CA. 12345</div>
     <div class="text location2">Phone: 123-456-7890</div>
     <div class="text location3"><img src="../assets/CompanyLogo.png" alt="" width="100px"></div>
     <div class="text location4">Copyright © Muzzles RestaurantPhone: 123-456-7890</div>
   </div>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
