--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -54,7 +54,7 @@
 
   <div class="container-fluid">
     <div class="row row-cols-1 row-cols-md-2 g-4">
-      <div class="col ps-0">
+      <div class="col">
         <div class="card edges">
           <img src="../assets/menubeef.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
           <div class="card-body">
@@ -105,7 +105,7 @@
           </div>
         </div>
       </div>
-      <div class="col pe-0">
+      <div class="col">
         <div class="card edges">
           <img src="../assets/menuseafood.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
           <div class="card-body">
@@ -149,7 +149,7 @@
           </div>
         </div>
       </div>
-      <div class="col ps-0">
+      <div class="col">
         <div class="card edges">
           <img src="../assets/menumeat.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
           <div class="card-body">
@@ -200,7 +200,7 @@
           </div>
         </div>
       </div>
-      <div class="col pe-0">
+      <div class="col">
         <div class="card edges">
           <img src="../assets/menudesserts.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
           <div class="card-body">
