removed border on cards

--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -44,85 +44,85 @@
     <div class="container-fluid">
       <div class="row d-flex justify-content-between" style="padding: 44px 7.3%;">
         <div class="col p-0">
-          <div class="card photo-card photo-card-md">
-            <div class="card photo-card-body p-2">
+          <div class="card photo-card photo-card-md border-0">
+            <div class="card photo-card-body p-2 border-0">
               <img src="../assets/photo01.jpg" class="card photo-card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card photo-card photo-card-md">
-            <div class="card photo-card-body p-2">
+          <div class="card photo-card photo-card-md border-0">
+            <div class="card photo-card-body p-2 border-0">
               <img src="../assets/photo02.jpg" class="card photo-card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card photo-card photo-card-md">
-            <div class="card photo-card-body p-2">
+          <div class="card photo-card photo-card-md border-0">
+            <div class="card photo-card-body p-2 border-0">
               <img src="../assets/photo03.jpg" class="card photo-card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card photo-card photo-card-md">
-            <div class="card photo-card-body p-2">
+          <div class="card photo-card photo-card-md border-0">
+            <div class="card photo-card-body p-2 border-0">
               <img src="../assets/photo04.jpg" class="card photo-card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card photo-card photo-card-md">
-            <div class="card photo-card-body p-2">
+          <div class="card photo-card photo-card-md border-0">
+            <div class="card photo-card-body p-2 border-0">
               <img src="../assets/photo05.jpg" class="card photo-card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card photo-card photo-card-md">
-            <div class="card photo-card-body p-2">
+          <div class="card photo-card photo-card-md border-0">
+            <div class="card photo-card-body p-2 border-0">
               <img src="../assets/photo06.jpg" class="card photo-card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card photo-card photo-card-md">
-            <div class="card photo-card-body p-2">
+          <div class="card photo-card photo-card-md border-0">
+            <div class="card photo-card-body p-2 border-0">
               <img src="../assets/photo07.jpg" class="card photo-card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card photo-card photo-card-md">
-            <div class="card photo-card-body p-2">
+          <div class="card photo-card photo-card-md border-0">
+            <div class="card photo-card-body p-2 border-0">
               <img src="../assets/photo08.jpg" class="card photo-card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card photo-card photo-card-md">
-            <div class="card photo-card-body p-2">
+          <div class="card photo-card photo-card-md border-0">
+            <div class="card photo-card-body p-2 border-0">
               <img src="../assets/photo09.jpg" class="card photo-card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card photo-card photo-card-md">
-            <div class="card photo-card-body p-2">
+          <div class="card photo-card photo-card-md border-0">
+            <div class="card photo-card-body p-2 border-0">
               <img src="../assets/photo10.jpg" class="card photo-card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card photo-card photo-card-md">
-            <div class="card photo-card-body p-2">
+          <div class="card photo-card photo-card-md border-0">
+            <div class="card photo-card-body p-2 border-0">
               <img src="../assets/photo11.jpg" class="card photo-card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card photo-card photo-card-md">
-            <div class="card photo-card-body p-2">
+          <div class="card photo-card photo-card-md border-0">
+            <div class="card photo-card-body p-2 border-0">
               <img src="../assets/photo12.jpg" class="card photo-card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
